# rps-rust

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  utils.rs
src/rps/: game.rs  mod.rs  types.rs  utils.rs
