[package]
name = "rps-rust"
version = "0.1.0"
authors = ["Mathias Karlgren"]
edition = "2021"
rust-version = "1.59"
publish = false

[dependencies]
rand = "0.8"
strum = { version = "0.25", features = ["derive"] }

[profile.release]
lto = true
strip = "debuginfo"

[profile.x86_64-unknown-linux-gnu]
inherits = "release"
strip = true
panic = "abort"
codegen-units = 1
opt-level = "s"
# cargo build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu
