[package]
name = "rps-rust"
version = "0.1.0"
authors = ["Mathias Karlgren"]
edition = "2024"
publish = false

[dependencies]
rand = "0.9"
strum = { version = "0.27", features = ["derive"] }

[lints.rust]
future-incompatible = "deny"
rust-2018-idioms = "deny"
unsafe-code = "deny"
variant-size-differences = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"

[lints.clippy]
all = "deny"
pedantic = "warn"
